--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <div>Salam Dunya</div>
+    <div>Salam Dunya</div>
+    <div>Salam Dunya</div>
+    <div>Salam Dunya</div>
+    <div>Salam Dunya</div>
+    <div>Salam Dunya</div>
+    <div>Salam Dunya</div>
 </body>
 </html>
